2007-08-12  Vincent Geddes  <vgeddes@gnome.org>

	* gtksourceview/gtksourceengine.h,
	  gtksourceview/gtksourcecontextengine.h,
	  gtksourceview/gtksourcelanguage.h,
	  gtksourceview/gtksourcebuffer.h,
	  gtksourceview/gtksourcelanguagemanager.h:
	  
	  Rename names of parent structs to a consistent
	  `parent_instance' (#464830).

2007-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/classic.xml:
	* gtksourceview/language-specs/kate.xml:
	* gtksourceview/language-specs/tango.xml:

	add a "search-match" style. GtkSourceView itself doesn't use
	this style but editors like gedit can read it to use a color
	that fits with the rest of the style scheme when highlighting
	search matches.

2007-08-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/sh.lang: comments cannot span
	multiple lines. Fixes bug #337833.

2007-08-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/nemerle.lang: port to new format.
	* gtksourceview/language-specs/vbnet.lang: ditto.

2007-08-08  Vincent Geddes  <vgeddes@gnome.org>

	* gtksourceview/language-specs/c.lang: Add support for
	  the C99 boolean definitions (bool, false, true).
	  (#464408, thelema@swbell.net).

2007-08-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/R.lang: port to the new format.
	* gtksourceview/language-specs/Ruby.lang: do not highlight
	the .class method as a class keyword.

=== gtksourceview 1.90.3 ===

2007-08-01  Paolo Borelli  <pborelli@katamail.com>

	* NEWS:
	* README:
	* configure.ac:

	GtkSourceView 1.90.3 released.

2007-07-31  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/classic.xml: changed description

2007-07-31  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/classic.xml: rename the "gvim"
	color scheme to "classic".

2007-07-31  Yevgen Muntyan  <muntyan@tamu.edu>

	* configure.ac: check for unistd.h explicitly.
