@@ -1,3 +1,8 @@
+2007-08-15  Paolo Maggi  <paolo@gnome.org>
+
+	* gtksourceview/gtksourcestylescheme.[ch]
+	(gtk_source_style_scheme_get_author): new method
+
 2007-08-12  Vincent Geddes  <vgeddes@gnome.org>
 
 	* gtksourceview/gtksourceengine.h,
